Added faker to pom.xml; made a number of lab content changes

--- a/java/setup/templates/pom.xml
+++ b/java/setup/templates/pom.xml
@@ -62,11 +62,15 @@
             <version>2.11.1</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.28</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
         </dependency>
     </dependencies>
 </project>
